# backstage

./: README.md  app-config.production.yaml  app-config.yaml  catalog-info.yaml  mkdocs.yml  skills-lock.json
.claude/skills/: plugin-analytics-instrumentation  plugin-full-frontend-system-migration
.continue/skills/: mui-to-bui-migration  plugin-new-frontend-system-support
.github/: onboard-exclude.txt
.github/workflows/: apis-onboard.yml  build.yml  catalog-onboard.yml  techdocs-onboard.yml
.qwen/skills/: app-frontend-system-migration  onboard-to-openapi-server
docs/: DEPLOY.md  PLUGINS.md  index.md
docs/architecture/: custom-modules.md  declarative-frontend.md  index.md  theme.md
docs/integrations/: events.md  github.md  gitlab.md  index.md  mcp.md
docs/phases/: a-theme-logo.md  b-dormant-github-plugins.md  c-gitlab-parity.md  d-real-time-freshness.md  index.md
skills/: app-frontend-system-migration  mui-to-bui-migration  onboard-to-openapi-server  plugin-analytics-instrumentation  plugin-full-frontend-system-migration  plugin-new-frontend-system-support
templates/cosmic-applet/: template.yaml
templates/cosmic-applet/content/: AGENTS.md  Cargo.toml  README.md  catalog-info.yaml  flake.nix  mkdocs.yml
templates/cosmic-applet/content/.claude/skills/: add-command.md
templates/cosmic-applet/content/.github/workflows/: ci.yml
templates/cosmic-applet/content/docs/: development.md  index.md
templates/cosmic-applet/content/res/: cosmic-applet.desktop.in
templates/cosmic-applet/content/src/: main.rs  window.rs
templates/kubernetes-aws-eks/: template.yaml
templates/kubernetes-aws-eks/content/: .gitignore  AGENTS.md  README.md  catalog-info.yaml  flake.nix  justfile  mkdocs.yml
templates/kubernetes-aws-eks/content/docs/: development.md  index.md
templates/kubernetes-aws-eks/content/infra/: main.tf  outputs.tf  variables.tf  versions.tf
templates/kubernetes-azure-aks/: template.yaml
templates/kubernetes-azure-aks/content/: .gitignore  AGENTS.md  README.md  catalog-info.yaml  flake.nix  justfile  mkdocs.yml
templates/kubernetes-azure-aks/content/docs/: development.md  index.md
templates/kubernetes-azure-aks/content/infra/: main.tf  outputs.tf  variables.tf  versions.tf
templates/kubernetes-gcp-gke/: template.yaml
templates/kubernetes-gcp-gke/content/: .envrc  .gitignore  AGENTS.md  README.md  catalog-info.yaml  flake.nix  justfile  mkdocs.yml
templates/kubernetes-gcp-gke/content/docs/: development.md  index.md
templates/kubernetes-gcp-gke/content/infra/: .terraform-docs.yml  .tflint.hcl  README.md  main.tf  outputs.tf  variables.tf  versions.tf
templates/nixos-module/: template.yaml
templates/nixos-module/content/: .gitignore  AGENTS.md  README.md  catalog-info.yaml  flake.nix  module.nix
templates/nixos-module/content/docs/: development.md  index.md
templates/python-service/: template.yaml
templates/python-service/content/: .gitignore  AGENTS.md  README.md  catalog-info.yaml  flake.nix  mkdocs.yml  pyproject.toml
templates/python-service/content/.claude/skills/: add-endpoint.md
templates/python-service/content/.github/workflows/: ci.yml
templates/python-service/content/app/: __init__.py  main.py
templates/python-service/content/docs/: api.md  development.md  index.md
templates/python-service/content/tests/: test_main.py
templates/rust-service/: template.yaml
templates/rust-service/content/: AGENTS.md  Cargo.toml  README.md  catalog-info.yaml  flake.nix
templates/rust-service/content/.claude/skills/: add-endpoint.md
templates/rust-service/content/.github/workflows/: ci.yml
templates/rust-service/content/docs/: api.md  development.md  index.md
templates/rust-service/content/src/: main.rs
templates/terraform-aws/: template.yaml
templates/terraform-aws/content/: .envrc  .gitignore  AGENTS.md  README.md  catalog-info.yaml  flake.nix  justfile  main.tf  mkdocs.yml  outputs.tf  terraform.tfvars.example  variables.tf
templates/terraform-azure/: template.yaml
templates/terraform-azure/content/: .gitignore  AGENTS.md  README.md  catalog-info.yaml  flake.nix  main.tf  mkdocs.yml  outputs.tf  terraform.tfvars.example  variables.tf
templates/terraform-gcp/: template.yaml
templates/terraform-gcp/content/: .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  Justfile  README.md  catalog-info.yaml  flake.nix  main.tf  mkdocs.yml  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
templates/typescript-service/: template.yaml
templates/typescript-service/content/: .gitignore  .prettierignore  AGENTS.md  README.md  catalog-info.yaml  eslint.config.js  flake.nix  package.json  tsconfig.json  vitest.config.ts
(+68 files in other folders)
