[package]
name = "${{ values.name }}"
version = "0.1.0"
edition = "2021"
description = "${{ values.description }}"
license = "MIT OR Apache-2.0"
repository = "https://github.com/${{ values.destination.owner }}/${{ values.destination.repo }}"

[dependencies]
# libcosmic is git-pinned; the upstream API still moves and there is no stable
# crates.io release yet. This matches the cosmic-ext-* convention.
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false, features = [
    "applet",
    "tokio",
    "wayland",
    "single-instance",
] }

tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
